2006-05-18  Alex Roitman  <shura@gramps-project.org>
	* src/DisplayTabs/_BackRefList.py (edit_button_clicked): Typo.
	* src/DataViews/_RepositoryView.py (edit, on_double_click): Catch
	exception.
	* src/GrampsWidgets.py (PlaceEntry.add_del_clicked) 
	(PlaceEntry.share_clicked): Catch exception.
	* src/GrampsDb/_DbUtils.py (db_copy): Copy bookmarks and gender stats.
	* data/grampsxml.dtd: Update for new bookmarks.
	* data/grampsxml.rng: Update for new bookmarks.
	* src/GrampsDb/_WriteXML.py (write_bookmarks): Add method to write
	new bookmarks.
	* src/GrampsDb/_ReadXML.py (start_bmark): Parse new bookmarks
	* INSTALL: Clarify; list build-dependencies.
	* src/GrampsDb/_ReadGrdb.py: Update progress.
	(importData): Import bookmarks.

2006-05-18  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix parsing level so that CHAR is not 
	skipped
	* src/DisplayTabs/_AddrEmbedList.py: fix city/state mapping (romjerome)
	* src/glade/gramps.glade: fix media ref dialog with warn box
	* src/Filters/_PersonSidebarFilter.py (PersonSidebarFilter.clear): 
	fix clearing of combobox

2006-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadXML.py (start_childref): Typo.
	* src/GrampsDb/_ReadGrdb.py: Add repos, modularize.
	* src/ViewManager.py: Reorder calls to make work with ArgHandler.

2006-05-17  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: pychecker fixes
	* src/GrampsWidgets.py: pychecker fixes
	* src/glade/gramps.glade: fix text entry -> label
	* src/NameDisplay.py: pychecker fixes
	* src/DisplayState.py: pychecker fixes
	* src/GrampsDisplay.py: pychecker fixes
	* src/DateEdit.py: pychecker fixes
	* src/gramps_main.py: pychecker fixes
	* src/DbLoader.py: pychecker fixes

2006-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py: Adapt to recent changes.
	* src/BasicUtils.py (update_empty): Clean up callback.
	* src/GrampsDb/_ReadGedcom.py: Clean up callback.